feat: login and layout navbar translations

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -1,5 +1,27 @@
 {
   "Index": {
     "test": "test"
+  },
+  "NavHeader": {
+    "inicio": "Home",
+    "vehiculos": "Vehicles",
+    "servicios": "Services",
+    "empleo": "Employment",
+    "ayuda": "Help",
+    "contactenos": "Contact us",
+    "conocenosMas": "About us",
+    "idioma": "Language",
+    "cerrarSession": "Close session",
+    "iniciarSession": "Log in",
+    "register":"Sign in",
+    "usuarioNavTitle": "User",
+    "datosUsuario": "Your data"
+  },
+  "LoginPage": {
+    "welcomeBack": "Welcome back",
+    "emailField": "Email address",
+    "passWordField": "Password",
+    "forgotPass": "Forgot password ?",
+    "logIn": "Log in"
   }
 }
