feat: recover password page i18n

--- a/frontend/translations/auth/en.json
+++ b/frontend/translations/auth/en.json
@@ -5,5 +5,10 @@
     "passWordField": "Password",
     "forgotPass": "Forgot password ?",
     "logIn": "Log in"
+  },
+  "RecoverPasswordPage": {
+    "recoverPassword":"Recover password",
+    "emailField": "Email address",
+    "recoverBtn":"Recover"
   }
 }
