--- a/frontend/translations/auth/es.json
+++ b/frontend/translations/auth/es.json
@@ -5,5 +5,10 @@
     "passWordField": "Contraseña",
     "forgotPass": "¿ Olvidaste tu contraseña ?",
     "logIn": "Iniciar sesión"
+  },
+  "RecoverPasswordPage": {
+    "recoverPassword":"Recuperar contraseña",
+    "emailField": "Dirección de Email",
+    "recoverBtn":"Recuperar"
   }
 }
