Creating route login page

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -16,5 +16,9 @@
     "register":"Sign in",
     "usuarioNavTitle": "User",
     "datosUsuario": "Your data"
+  },
+  "CommonButtons":{
+    "continue":"Continue",
+    "previous":"Volver"
   }
 }
