--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -16,5 +16,9 @@
     "register":"Registrarse",
     "usuarioNavTitle": "Usuario",
     "datosUsuario": "Datos de usuario"
+  },
+  "CommonButtons":{
+    "continue":"Continuar",
+    "previous":"Volver"
   }
 }
