--- a/frontend/translations/auth/en.json
+++ b/frontend/translations/auth/en.json
@@ -13,110 +13,114 @@
   },
   "RegisterPage":{
     "registerTitle": "Register panel",
-    "helpMessages1": "*Estos son los pasos a seguir para completar su registro.",
-    "helpMessages2": "*Si en algún momento necesita acceder a una sección del registro, haga clic en el panel de color verde, que sea de su preferencia",
-    "step1": "¿Cómo supo de nosotros?",
-    "step2": "Registrar usuario",
-    "step3": "Idioma del adiestramiento",
-    "step4": "Datos de inicio de sesión",
-    "step5": "Frecuencia e información a recibir",
-    "step6": "Datos de facturación",
-    "infoFrecuency": "No seleccionaste mantener informado",
+    "helpMessages1": "*These are the steps to follow to complete your registration.",
+    "helpMessages2": "*If at any time you need to access a section of the registry, click on the green panel, which is your preference",
+    "step1": "How did you know about us?",
+    "step2": "Register user",
+    "step3": "Training language",
+    "step4": "Login data",
+    "step5": "Frequency and information to receive",
+    "step6": "Billing data",
+    "infoFrecuency": "You did not select keep informed",
+    "succcessRegister": "Registration made successfully",
+    "errorRegister": "Error in your registration",
+    "cancel":"Cancel",
+    "register":"Sign up",
     "firstStep":{
-      "header": "Por favor, coméntenos, como se entero de los servicios de la empresa. Es importante para nosotros, porque nos ayuda a mejorar el servicio que le ofrecemos",
-      "webPortal": "Portal web de la empresa",
-      "socialMedias": "Redes sociales",
-      "friends": "Amigos",
-      "others": "Otros",
-      "tagOthers": "Especifique, cual fue el medio por que el que supo de nosotros",
-      "selectOptions":"Seleccione una o varias redes sociales"
+      "header": "Please tell us how you found out about the company's services. It is important to us, because it helps us to improve the service we offer you.",
+      "webPortal": "Business website",
+      "socialMedias": "Social medias",
+      "friends": "Friends",
+      "others": "Others",
+      "tagOthers": "Specify, what was the means by which the person who learned about us",
+      "selectOptions":"Select one or more social networkss"
     },
     "secondStep":{
-      "header": "Selecciona un tipo de usuario",
-      "natural": "Persona natural",
+      "header": "Select a user type",
+      "natural": "Natural Person",
       "business": "Business",
-      "name": "Nombre",
-      "lastname": "Apellido",
-      "ID": "Cédula/pasaporte/DNI",
-      "email": "Correo electrónico",
-      "country": "País de procedencia",
-      "phone": "Teléfono",
-      "mobile": "Móvil",
-      "landline": "Fijo",
-      "businessName" : "Nombre de la empresa",
-      "businessId":"Razón social/RIF",
-      "city": "Ciudad",
-      "address": "Dirección",
-      "fullname": "Nombre y Apellido",
-      "subheaderBusiness": "Datos de la empresa",
-      "subheaderBusiness2": "Datos del representante de la empresa",
-      "warning": "Por favor verifique que sus datos sean los correctos, ya que serán utilizados para generar su publicación, enviarle sus datos de acceso, o notificar sus pagos"
+      "name": "Name",
+      "lastname": "Lastname",
+      "ID": "ID",
+      "email": "E-mail",
+      "country": "Country",
+      "phone": "Phone",
+      "mobile": "Mobile",
+      "landline": "Landline",
+      "businessName" : "Business Name",
+      "businessId":"Social Reason/RIF",
+      "city": "City",
+      "address": "Address",
+      "fullname": "Fullname",
+      "subheaderBusiness": "Business data",
+      "subheaderBusiness2": "Details of the Business representative",
+      "warning": "Please verify that your data is correct, as it will be used to generate your publication, send you your access data, or notify your payments"
     },
     "thirdStep":{
-      "header": "Selecciona un idioma",
-      "spanish": "Español",
-      "english": "Inglés"
+      "header": "Select a language",
+      "spanish": "Spanish",
+      "english": "English"
     },
     "fourthStep":{
-      "email": "Correo para acceder al portal",
-      "password": "Contraseña",
-      "informedCheck": "Quiero mantenerme informado acerca de los servicios que ofrece la empresa, y otros aspectos de interés"
+      "email": "E-mail",
+      "password": "Password",
+      "informedCheck": "I want to stay informed about the services offered by the company, and other aspects of interest"
     },
     "fifthStep":{
-      "header": "¿Con que frecuencia le gustaría mantenerse informado acerca de los servicios que ofrece la empresa?",
-      "weekly": "1 vez a la semana",
-      "twoWeekly": "Cada 2 semanas",
-      "monthly": "1 vez al mes",
-      "other": "Otra",
-      "interestServices": "Servicios de interés",
-      "selectCategory": "Puede seleccionar más de 1 categoría, si lo desea",
-      "informedWays": "Medio(s) por los que le gustaría mantenerse informado",
-      "email": "Correo electrónico según sus preferencias",
-      "bussinesSocialMedia": "Redes sociales de la empresa",
-      "mySocialMedia": "Mis redes sociales",
-      "sms": "Mensaje de texto",
-      "otherWay": "Otro(s)",
-      "facebook": "Mensaje privado en mi cuenta de Facebook",
-      "phoneNumber": "Verifique, o inserte el número por el que desea mantenerse informado",
-      "otherWayTag": "Especifique los medios por los que desea mantenerse informado",
-      "facebookTag": "Introduzca dirección de correo de Facebook para contactarlo",
-      "customFrecuencyTag": "Personalice su frecuencia"
+      "header": "How often would you like to be informed about the services offered by the company?",
+      "weekly": "1 time per week",
+      "twoWeekly": "2 time per week",
+      "monthly": "1 time per month",
+      "other": "Other",
+      "interestServices": "Interest services",
+      "selectCategory": "You can select more than 1 category, if you wish",
+      "informedWays": "Medium(s) by which you would like to be informed",
+      "email": "Email according to your preferences",
+      "bussinesSocialMedia": "Bussines Social Medias",
+      "mySocialMedia": "My Social Medias",
+      "sms": "Text message",
+      "otherWay": "Others",
+      "facebook": "Private message on my Facebook account",
+      "phoneNumber": "Verify, or insert the number you want to be informed by",
+      "otherWayTag": "Specify the means by which you want to be informed",
+      "facebookTag": "Enter Facebook email address to contact you",
+      "customFrecuencyTag": "Customize your frequency"
     },
     "sixthStep":{
-      "clientCodeTag": "Su código de cliente es",
-      "warningMessage": "Es importante que usted FORMALICE su pago para poder publicar su vehículo, mediante su PAGO.",
-      "header": "Datos a utilizar, para facilitar las notificaciones de pago",
-      "subHeader": "Queremos ayudarte, facilitando el pago de la publicación de tu apartamento o casa , y para lo cual, te pedimos que proporciones los datos que consideras utilizar, para realizar tus transferencias o depósitos, especificados a continuación",
-      "originBank": "Banco origen",
-      "destinyBank": "Banco destino",
-      "originCountry": "País donde reside la cuenta del banco origen",
+      "clientCodeTag": "Your customer code is",
+      "warningMessage": "It is important that you FORMALIZE your payment to be able to publish your vehicle, through your PAYMENT.",
+      "header": "Data to be used to facilitate payment notifications",
+      "subHeader": "We want to help you, facilitating the payment of the publication of your apartment or house, and for which, we ask you to provide the data that you consider using, to make your transfers or deposits, specified below",
+      "originBank": "Origin bank",
+      "destinyBank": "Destiny bank",
+      "originCountry": "Country where the origin bank account resides",
       "firstSection": {
-        "title": "Sugerencia para realizar sus pagos",
-        "paragraph1": "Se recomienda que inicie sesión en el portal Web de la empresa, para que los datos que ha proporcionado, puedan ser utilizados, para facilitarle, el proceso de notificación de pago de su publicación.",
-        "paragraph2": "De lo contrario, deberá llenar la información solicitada, en el portal Web de la empresa, y en el portal de notificación de pagos."
+        "title": "Suggestion to make your payments",
+        "paragraph1": "It is recommended that you log in to the company's Web portal, so that the data you have provided can be used to facilitate the payment notification process for your publication.",
+        "paragraph2": "Otherwise, you must fill out the requested information on the company's Web portal and on the payment notification portal."
       },
       "secondSection": {
-        "title": "Pasos para notificar su pago",
-        "paragraph1": "1- Cuando usted se registra, el portal le genera el código de cliente, que ve en pantalla, y que le será enviado a su correo, junto con sus datos de acceso",
-        "paragraph2": "2- Luego utilice el código proporcionado, y acceda al sistema de notificación de pagos de la empresa, haciendo clic aquí: ",
-        "linkParagraph2": "notificarPagos",
-        "paragraph3": "3- Introduzca el código del cliente, en el sistema de notificación de pago",
-        "paragraph4": "4- Presione el botón Notificar pago, en el sistema de notificación de pagos"
+        "title": "Steps to notify your payment",
+        "paragraph1": "1- When you register, the portal generates the customer code, which you see on the screen, and which will be sent to your email, along with your access data.",
+        "paragraph2": "2- Then use the code provided, and access the company's payment notification system, by clicking here: ",
+        "linkParagraph2": "notifyPayments",
+        "paragraph3": "3- Enter the customer code, in the payment notification system",
+        "paragraph4": "4- Press the Notify payment button, in the payment notification system"
       },
       "thirdSection": {
-        "title": "Para transferencias bancarias o depósito",
-        "paymentData": "Datos de pago",
-        "bank": "Banco",
-        "accountNumber": "Nro de cuenta",
-        "SWIFTCode": "Código SWIFT",
-        "accountName": "A nombre de:"
+        "title": "For bank transfers or deposit",
+        "paymentData": "Payment data",
+        "bank": "Bank",
+        "accountNumber": "Account number",
+        "SWIFTCode": "SWIFT code",
+        "accountName": "To name:"
       },
       "fourthSection": {
-        "title": "Horario de atención al público",
-        "attentionDays": "Lunes a Viernes",
-        "attentionHours": "De 8.00am a 12.00m y de 1:00pm a 5:00pm",
-        "phoneNumbers": "Teléfonos",
-        "email": "Email"
+        "title": "Customer service hours",
+        "attentionDays": "Monday to Friday",
+        "attentionHours": "Since 8.00am to 12.00m & Since 1:00pm to 5:00pm",
+        "phoneNumbers": "Phones",
+        "email": "E-mail"
       }
     }
   }
